Раздел "Руководство и педогогический состав" - Исправлен стаж работы у администрации - Добавлена "Соколова Елена Степановна" - Удалена "Козлова Оксана Игоревна" - Удалена "Козлова Анна Владимировна" Раздел "Вакансии места для приема (перевода)" - Исправлено кол-во вакантных мест Добавлен HTML тег <blockquote>

--- a/assets/css/style_textblock.css
+++ b/assets/css/style_textblock.css
@@ -140,6 +140,14 @@ th {
     text-indent: 25px;
 }
 
+/* Перечисление элементов в тексте */
+.info__text > blockquote {
+    font-size: 14px;
+    text-align: left;
+    margin-bottom: -9px;
+    text-indent: -9px;
+}
+
 /* Ссылки в тексте */
 .url__link {
     display: inline-block;
