1) Добавлена новая картинка на главную 2) в CSS исправлен размер

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -743,7 +743,7 @@ p {
     text-align: center; /* Выравние по горизонтали */
 }
 .help__desk img {
-    max-width: auto;
+    max-width: 320px;
     /*width: 200px;*/
     max-height: 320px;
     
