--- Раздел "Главная" --- Добавлено: 1) Картинка "Помощь педагогам" в Справочные службы
Изменено:
1) CSS - добавлен класс image__service
2) Загружена картинка podderzhka_pedagogov.jpg

--- a/assets/css/img_files.css
+++ b/assets/css/img_files.css
@@ -41,7 +41,11 @@
     align-items: center;
 }
 
-
+/* картинки - справочной службы */
+.image__service {
+    width: 110%;
+    height: auto;
+}
 /* картинка на странице */
 .image__minimized:hover {
     box-shadow: 0 0 10px #444;  /* Тень */
